# patrones

./: CMakeLists.txt  abstract_component.cpp  abstract_component.h  abstract_factory.h  application.cpp  application.h  button.cpp  button.h  componente.h  components.txt  creator.h  factory.h  gui_factory.cpp  gui_factory.h  label.cpp  label.h  render.cpp  render.h  sdl_button.h  sdl_factory.h  sdl_label.h  sfml_button.h  sfml_label.h  text_box.cpp  text_box.h
